# svgo-rs

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  processor.rs
src/plugins/: mod.rs  path.rs  traits.rs
