[package]
name = "svgo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
quick-xml = "0.37.1"
tempfile = "3.14.0"

[dev-dependencies]
tempfile = "3.9"
